<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur" >
    
    <!--  Dummy item to prevent auto focus on form -->
    <LinearLayout
    android:focusable="true" android:focusableInTouchMode="true"
    android:layout_width="0px" android:layout_height="0px"/>

    <RelativeLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerVertical="true"
    	android:layout_centerHorizontal="true"
    	>
    	
	   <TextView
	       android:id="@+id/welcome"
	       android:layout_width="300dp"
	       android:layout_height="wrap_content"
	       android:layout_alignParentTop="true"
	       android:layout_centerHorizontal="true"
	       android:gravity="center"
	       android:text="@string/label_reset_password_welcome"
	       android:textSize="26sp" />
	        
	    <EditText
	        android:id="@+id/email"
	        android:layout_width="240dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/welcome"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="32dp"
	        android:focusable="true"
	        android:gravity="center"
	        android:hint="@string/hint_reset_password_email"
	        android:inputType="textEmailAddress"
	        android:typeface="sans" />
	    
	      <Button
	          android:id="@+id/resetPasswordButton"
	          android:layout_width="200dp"
	          android:layout_height="wrap_content"
	          android:layout_below="@+id/email"
	          android:layout_centerHorizontal="true"
	          android:layout_marginTop="26dp"
	          android:background="@drawable/custom_button"
	          android:text="@string/buttonlabel_reset_password" />
	      
	      <!-- Displays login errors -->
	      <TextView
	          android:id="@+id/msg"
	          android:layout_width="300dp"
	          android:layout_height="wrap_content"
	          android:layout_below="@+id/resetPasswordButton"
	          android:layout_centerHorizontal="true"
	          android:layout_marginTop="26dp"
	          android:gravity="center" />
	     
 
</RelativeLayout>

</RelativeLayout>
